--- a/index.html
+++ b/index.html
@@ -555,8 +555,8 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="https://instagram.com/username_anda" class="social-link instagram" target="_blank">📷</a>
-                        <a href="https://wa.me/6281234567890" class="social-link whatsapp" target="_blank">💬</a>
+                        <a href="https://instagram.com/devrmnd" class="social-link instagram" target="_blank">📷</a>
+                        <a href="https://wa.me/6289510529209" class="social-link whatsapp" target="_blank">💬</a>
                     </div>
                 </div>
                 <div class="contact-form">
