--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
         // WhatsApp integration
         function openWhatsApp() {
-            const phoneNumber = "6281234567890"; // Ganti dengan nomor WhatsApp Anda
+            const phoneNumber = "62895105209"; // Ganti dengan nomor WhatsApp Anda
             const message = "Halo, saya tertarik dengan layanan Anda!";
             const whatsappURL = `https://api.whatsapp.com/send/?phone=6289510529209&text&type=phone_number&app_absent=0`;
             window.open(whatsappURL, '_blank');
@@ -665,7 +665,7 @@
 
         // Instagram integration
         function openInstagram() {
-            const username = "username_anda"; // Ganti dengan username Instagram Anda
+            const username = "devrmnd"; // Ganti dengan username Instagram Anda
             const instagramURL = `https://instagram.com/devrmnd`;
             window.open(instagramURL, '_blank');
         }
