--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
                     <p>Saya telah berkecimpung dalam dunia web development selama beberapa tahun. Saya memiliki passion dalam menciptakan pengalaman digital yang menyenangkan dan mudah digunakan bagi pengguna.</p>
                     <p>Dengan keahlian dalam HTML, CSS, JavaScript, dan berbagai framework modern, saya siap membantu mewujudkan ide-ide kreatif menjadi kenyataan digital.</p>
                     <div class="skills">
-                        <span class="skill">HTML</span>
-                        <span class="skill">CSS</span>
-                        <span class="skill">JavaScript</span>
+                        <span class="skill">ID Game</span>
+                        <span class="skill">Top Up Game</span>
+                        <span class="skill">Google</span>
                         <span class="skill">React</span>
                         <span class="skill">Responsive Design</span>
                         <span class="skill">UI/UX</span>
@@ -544,14 +544,14 @@
                         <div class="contact-icon">📱</div>
                         <div>
                             <h4>Telepon</h4>
-                            <p>+62 812 3456 7890</p>
+                            <p>+62 895 1052 9209</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📍</div>
                         <div>
                             <h4>Lokasi</h4>
-                            <p>Jakarta, Indonesia</p>
+                            <p>Mojokerto, Indonesia</p>
                         </div>
                     </div>
                     <div class="social-links">
@@ -585,14 +585,14 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <div class="footer-logo">Nama Anda</div>
+                <div class="footer-logo">Dheva</div>
                 <div class="footer-links">
                     <a href="#home">Home</a>
                     <a href="#about">Tentang</a>
                     <a href="#projects">Proyek</a>
                     <a href="#contact">Kontak</a>
                 </div>
-                <p class="copyright">© 2023 Nama Anda. All rights reserved.</p>
+                <p class="copyright">© 2025 Dheva. All rights reserved.</p>
             </div>
         </div>
     </footer>
