--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 </div>
                 <div>
                     <h3>Web Developer Berpengalaman</h3>
-                    <p>Saya telah berkecimpung dalam dunia web development selama beberapa tahun. Saya memiliki passion dalam menciptakan pengalaman digital yang menyenangkan dan mudah digunakan bagi pengguna.</p>
+                    <p>Ini web buatan saya menggunakan coding sendiri.</p>
                     <p>Dengan keahlian dalam HTML, CSS, JavaScript, dan berbagai framework modern, saya siap membantu mewujudkan ide-ide kreatif menjadi kenyataan digital.</p>
                     <div class="skills">
                         <span class="skill">ID Game</span>
@@ -537,7 +537,7 @@
                         <div class="contact-icon">📧</div>
                         <div>
                             <h4>Email</h4>
-                            <p>email@anda.com</p>
+                            <p>dhevasenraa@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
