--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <div class="logo">Nama Anda</div>
+                <div class="logo">Dheva</div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">Tentang</a></li>
