--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Hai, Saya Dheva Armanda Rizqi</h1>
-                <p>Saya seorang siswa yang ada di SMKN1 Sooko yang mengambil jurusan Desain Komunikasi Visual saya kelas 11, hobi saya basket sama karate saya suka itu dikarenakan berolahraga seru juga hehe:).</p>
+                <p>Saya seorang siswa yang ada di SMKN1 Sooko yang mengambil jurusan Desain Komunikasi Visual saya kelas 11, hobi saya basket sama karate saya suka itu dikarenakan berolahraga seru juga hehe:)</p>
                 <div>
                     <a href="#contact" class="btn">Hubungi Saya</a>
                     <a href="#projects" class="btn btn-secondary">Lihat Proyek</a>
